updated page data with nodejs

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="icon" href="images/favicon.ico">
   <link rel="stylesheet" href="basicstyle.css">
   <script src="https://kit.fontawesome.com/b1cfb7f8e3.js" crossorigin="anonymous"></script>
@@ -103,7 +104,11 @@
             <span class="padding">Android Studio</span>
           </div>
         </div>
-
+        <div class="outerbox">
+          <div class="progress nodejs" data-bar-width="80">
+            <span class="padding">Node.js</span>
+          </div>
+        </div>
       </div>
     </section>
     <section id="education">
