added mailto in form

--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
       </header>
       <div class="details-container">
         <div class="contact-form">
-          <form class="form-input text-center" action="index.html" method="post">
+          <form class="form-input text-center" action="mailto:shashwaksingh.27@gmail.com" method="POST">
             <input class="input" type="text" name="" value="" placeholder="Your Name">
             <input class="input" type="email" name="" value="" placeholder="Your Email">
             <textarea class="input" name="" rows="4" cols="80" placeholder="Message"></textarea>
