form submit functionality reached using formspree

--- a/index.html
+++ b/index.html
@@ -279,11 +279,11 @@
       </header>
       <div class="details-container">
         <div class="contact-form">
-          <form class="form-input text-center" action="mailto:shashwatksingh.27@gmail.com" method="POST">
-            <input class="input" type="text" name="" value="" placeholder="Your Name">
-            <input class="input" type="email" name="" value="" placeholder="Your Email">
-            <textarea class="input" name="" rows="4" cols="80" placeholder="Message"></textarea>
-            <button type="submit" name="Send Message" class="allblockletters">Send Message</button>
+          <form class="form-input text-center" action="https://formspree.io/f/xyybvlwb" method="POST">
+            <input class="input" type="text" name="Name" value="" placeholder="Your Name">
+            <input class="input" type="email" name="Email" value="" placeholder="Your Email">
+            <textarea class="input" name="Message" rows="4" cols="80" placeholder="Message"></textarea>
+            <button type="submit" name="" class="allblockletters">Send Message</button>
           </form>
         </div>
         <div class="details">
