Add angularjs as a skill; removed console logs

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
           </div>
         </div>
         <div class="outerbox">
-          <div class="progress python" data-bar-width="90">
+          <div class="progress python" data-bar-width="50">
             <span class="padding">Python</span>
           </div>
         </div>
@@ -119,8 +119,13 @@
           </div>
         </div>
         <div class="outerbox">
-          <div class="progress reactjs" data-bar-width="20">
+          <div class="progress reactjs" data-bar-width="50">
             <span class="padding">ReactJS</span>
+          </div>
+        </div>
+        <div class="outerbox">
+          <div class="progress angularjs" data-bar-width="60">
+            <span class="padding">AngularJS</span>
           </div>
         </div>
       </div>
