Change Education icon
The Education icon will be used for Work Experience now

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
     <section id="education">
       <header>
         <h1 class="section-heading text-center">
-          <span><i class="fas fa-toolbox"></i></span>
+          <span><i class="fas fa-university"></i></span>
           <span>
             Education
           </span>
