adding basic work experience section

--- a/index.html
+++ b/index.html
@@ -144,7 +144,9 @@
           <header>
             <h4>
               <span>
-                <img class="institute-logo" src="https://lh3.googleusercontent.com/pw/ACtC-3egtw6WVvIQDQuKTRoPF7l9IAdPFiUaLqP5Vrou6QeuNr7c1ApUAJwGiT3TWYWQN4qx3S90t3BKS7IFzY_-bgPgwCzsXxCXR6JjGW-a_RXFyDO3X9fG7HVrDGuHQPBIo0lRuQNeue2vJ7iB1U-n8j0=s187-no?authuser=0" alt="tu_logo">
+                <img class="institute-logo"
+                  src="https://lh3.googleusercontent.com/pw/ACtC-3egtw6WVvIQDQuKTRoPF7l9IAdPFiUaLqP5Vrou6QeuNr7c1ApUAJwGiT3TWYWQN4qx3S90t3BKS7IFzY_-bgPgwCzsXxCXR6JjGW-a_RXFyDO3X9fG7HVrDGuHQPBIo0lRuQNeue2vJ7iB1U-n8j0=s187-no?authuser=0"
+                  alt="tu_logo">
               </span>
               <span>
                 Tezpur University, Tezpur, Assam
@@ -165,7 +167,9 @@
           <header>
             <h4>
               <span>
-                <img class="institute-logo"  src="https://lh3.googleusercontent.com/pw/ACtC-3dEsKX6PCFga35PNmIE0834dSKYduGMH017b3rSj4Rll-LdjnBHLf98deh_kk6LXpyxF7bWYnzFcOWAhftLq4P4JFMrud0NKs57ajMK_ynyjsrztfOt6t0MjCxxdnMfkdq9vF2DIOLxTbNjtxaRtqY=s200-no?authuser=0" alt="cms_logo">
+                <img class="institute-logo"
+                  src="https://lh3.googleusercontent.com/pw/ACtC-3dEsKX6PCFga35PNmIE0834dSKYduGMH017b3rSj4Rll-LdjnBHLf98deh_kk6LXpyxF7bWYnzFcOWAhftLq4P4JFMrud0NKs57ajMK_ynyjsrztfOt6t0MjCxxdnMfkdq9vF2DIOLxTbNjtxaRtqY=s200-no?authuser=0"
+                  alt="cms_logo">
               </span>
               <span>
                 City Montessori School, Aliganj 'O', Lucknow
@@ -186,7 +190,9 @@
           <header>
             <h4>
               <span>
-                <img class="institute-logo" src="https://lh3.googleusercontent.com/pw/ACtC-3dEsKX6PCFga35PNmIE0834dSKYduGMH017b3rSj4Rll-LdjnBHLf98deh_kk6LXpyxF7bWYnzFcOWAhftLq4P4JFMrud0NKs57ajMK_ynyjsrztfOt6t0MjCxxdnMfkdq9vF2DIOLxTbNjtxaRtqY=s200-no?authuser=0" alt="cms_logo">
+                <img class="institute-logo"
+                  src="https://lh3.googleusercontent.com/pw/ACtC-3dEsKX6PCFga35PNmIE0834dSKYduGMH017b3rSj4Rll-LdjnBHLf98deh_kk6LXpyxF7bWYnzFcOWAhftLq4P4JFMrud0NKs57ajMK_ynyjsrztfOt6t0MjCxxdnMfkdq9vF2DIOLxTbNjtxaRtqY=s200-no?authuser=0"
+                  alt="cms_logo">
               </span>
               <span>
                 City Montessori School, Mahanagar, Lucknow
@@ -205,6 +211,62 @@
         </div>
         <div id="timeline">
           <div class="pointer">
+            <span><i class="fas fa-sun"></i></span>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section id="work-experience">
+      <header>
+        <h1 class="section-heading text-center">
+          <span><i class="fas fa-laptop"></i></span>
+          <span>
+            Work Experience
+          </span>
+        </h1>
+      </header>
+      <div class="work-experience-container">
+        <div class="portfolio-boxes">
+          <h4 class="project-title text-center">Auzmor</h4>
+          <h5 class="project-date">Software Engineer</h5>
+          <h5 class="project-date">August, 2021 - Current</h5>
+          <ul>
+            <li>
+              Fulfilling responsibilities as a full stack developer to
+              develop,and maintain scalable microservices across
+              products and teams.
+            </li>
+            <li>Extensive research in optimising and translating the
+              product requirements and following the architecture
+              best practices considering scalability, reliability, and
+              efficiency.
+            </li>
+            <li>Projects include integrations with google cloud apis,
+              websockets and other products depending on use
+              case.
+            </li>
+          </ul>
+        </div>
+        <div class="portfolio-boxes">
+          <h4 class="project-title text-center">Edugorilla</h4>
+          <h5 class="project-date">Frontend Developer Intern</h5>
+          <h5 class="project-date">March, 2021 - May, 2021 </h5>
+          <ul>
+            <li>
+              Efficiently resolving bugs and deploying and integrating
+              UI updates to the AngularJS infrastructure using Agile
+              scrum methodology.
+            </li>
+            <li>Managing the creation of landing pages and subsequent
+              updates considering page performance, data analytics,
+              and media marketing strategies.
+            </li>
+            <li>Transferring the AngularJS code to ReactJS.
+            </li>
+          </ul>
+        </div>
+        <div id="timeline-experience">
+          <div class="pointer-experience">
             <span><i class="fas fa-sun"></i></span>
           </div>
         </div>
