changing github username

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <a class="facebook" href="https://www.facebook.com/shashwat.singh.1029/" target="_blank"><i class="fab fa-facebook-f"></i></a>
         </li>
         <li>
-          <a class="github" href="https://github.com/harryalbrus272" target="_blank"><i class="fab fa-github"></i></a>
+          <a class="github" href="https://github.com/shashwatksingh" target="_blank"><i class="fab fa-github"></i></a>
         </li>
         <li>
           <a class="linkedin" href="https://www.linkedin.com/in/shashwat-kumar-singh-268271197" target="_blank"><i class="fab fa-linkedin-in"></i></a>
@@ -376,7 +376,7 @@
             <a class="facebook" href="https://www.facebook.com/shashwat.singh.1029/" target="_blank"><i class="fab fa-facebook-f"></i></a>
           </li>
           <li>
-            <a class="github" href="https://github.com/harryalbrus272" target="_blank"><i class="fab fa-github"></i></a>
+            <a class="github" href="https://github.com/shashwatksingh" target="_blank"><i class="fab fa-github"></i></a>
           </li>
           <li>
             <a class="linkedin" href="https://www.linkedin.com/in/shashwat-kumar-singh-268271197" target="_blank"><i class="fab fa-linkedin-in"></i></a>
