Update email in html file

--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
             </div>
             <div class="email padded">
               <span><i class="fas fa-envelope"></i></span>
-              <span>harryalbrus272@gmail.com</span>
+              <span>shashwatksingh.27@gmail.com</span>
             </div>
           </div>
         </div>
